data/derived/sp14/progs/unify/prog4024.ml.out
Characters 99-102:
  else if z = 0 then let n2 = reverse (string_of_int n) in z+1;;
                                                           ^^^
Error: This expression has type int but an expression was expected of type
         unit
